port r52642 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52643 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -85,6 +85,11 @@ BUG FIXES
     o	packageStatus() could return a data frame with duplicate row
 	names which could then not be printed.
 
+    o	txtProgressBar(style = 2) did not work correctly.
+      	
+	txtProgressBar(style = 3) did not display until a
+      	non-minimum value was set.
+
 
 
 		CHANGES IN R VERSION 2.11.1
