port r52646 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52648 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -90,6 +90,9 @@ BUG FIXES
 	txtProgressBar(style = 3) did not display until a
       	non-minimum value was set.
 
+    o	pdf() device suffered from buffer overflow when adding more than
+	a few raster images.
+
 
 
 		CHANGES IN R VERSION 2.11.1
