Port r52666 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52667 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -28,6 +28,8 @@ BUG FIXES
     o	serialize() to a raw vector works around the dismal performance
       	of Windows' memory manager by allocating much larger chunks of
       	memory less frequently.
+      	
+    o	readClipboard() could cause a segfault with certain clipboard data.
 
 
 
