Port r52683 from trunk.
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52684 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -93,6 +93,8 @@ BUG FIXES
     o	pdf() device suffered from buffer overflow when adding more than
 	a few raster images.
 
+    o   contour() did not display dashed line types properly when
+	contour lines were labelled. (Reported by David B. Thompson.)
 
 
 		CHANGES IN R VERSION 2.11.1
