ported r52690 [undoc( <data> )] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52691 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -96,6 +96,10 @@ BUG FIXES
     o   contour() did not display dashed line types properly when
 	contour lines were labelled. (Reported by David B. Thompson.)
 
+    o	tools::undoc() again detects undocumented data
+	objects.  Of course, this also affects R CMD check.
+
+
 
 		CHANGES IN R VERSION 2.11.1
 
