--- a/doc/manual/R-intro.texi
+++ b/doc/manual/R-intro.texi
@@ -7307,7 +7307,7 @@ When the @acronym{GNU} @strong{readline} library is available at the
 time @R{} is configured for compilation under UNIX, an inbuilt command
 line editor allowing recall, editing and re-submission of prior commands
 is used.  Note that other versions of @strong{readline} exist and may be
-used by the inbuilt command line editor: this may happen on Mac OS X.
+used by the inbuilt command line editor: this used to happen on Mac OS X.
 
 It can be disabled (useful for usage with @acronym{ESS} @footnote{The
 `Emacs Speaks Statistics' package; see the @acronym{URL}
@@ -7329,11 +7329,11 @@ characters, such as @kbd{Control-m}, are obtained by holding the
 holding down @key{META}@footnote{On a PC keyboard this is usually the
 Alt key, occasionally the `Windows' key.} and pressing @key{b}, and
 written as @kbd{M-b} in the following.  If your terminal does not have a
-@key{META} key, you can still type Meta characters using two-character
-sequences starting with @kbd{ESC}.  Thus, to enter @kbd{M-b}, you could
-type @key{ESC}@key{b}.  The @kbd{ESC} character sequences are also
-allowed on terminals with real Meta keys.  Note that case is significant
-for Meta characters.
+@key{META} key enabled, you can still type Meta characters using
+two-character sequences starting with @kbd{ESC}.  Thus, to enter
+@kbd{M-b}, you could type @key{ESC}@key{b}.  The @kbd{ESC} character
+sequences are also allowed on terminals with real Meta keys.  Note that
+case is significant for Meta characters.
 
 @appendixsection Editing actions
 
@@ -7351,9 +7351,6 @@ Pressing the @key{RET} command at any time causes the command to be
 re-submitted.
 
 Other editing actions are summarized in the following table.
-
-@c Unfortunately it does not seem to be possible to bind the motion keys,
-@c for example, to the arrow keys, which is something of a nuisance.
 
 @appendixsection Command-line editor summary
 
@@ -7419,6 +7416,17 @@ Re-submit the command to @R{}.
 @end table
 
 The final @key{RET} terminates the command line editing sequence.
+
+The @strong{readline} key bindings can be customized in the usual way
+@emph{via} a @file{~/.inputrc} file.  As from @R{} 2.12.0, these
+customizations can be conditioned on application @code{R}, that is
+by including a section like
+
+@example
+$if R
+  "\C-xd": "q('no')\n"
+$endif
+@end example
 
 @node Function and variable index, Concept index, The command-line editor, Top
 @appendix Function and variable index
